--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1><a href="index.html" target="_blank">WEB</a></h1>
-
+    <h2>** 이 HTML 사이트는 곧 사라질 수도 있습니다. **</h2>
     <h3>생활코딩님 감사합니다.</h3>
 
 
